--- a/BEEL/registro_login/templates/aboutus.html
+++ b/BEEL/registro_login/templates/aboutus.html
@@ -1,4 +1,4 @@
-{% extends "plantilla.html" %}
+{% extends "plantillas/plantilla_postulante.html" %}
 {% load static %}
 
 {% block content %}
@@ -8,12 +8,12 @@
         <link rel="stylesheet" href="{% static 'css/mision_vision.css' %}">
         <div class="content">
         <div class='mxw800p'>
-        <h3>Quienes Somos</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas quis molestias sunt ad placeat consequatur quae quibusdam recusandae, facilis voluptatem nihil suscipit sapiente voluptas, explicabo temporibus earum magni ipsam laboriosam enim dolor ullam? Maxime officia eius unde quod esse vero voluptatum voluptatem iure ullam eaque reprehenderit amet provident accusamus incidunt repellendus consectetur delectus, magnam vel molestiae hic dolore repellat assumenda.
-        </p>
-        <a href="#" class="btn2"btn> Saber más</a>
-                    
+        <h2>¿Quienes Somos?</h2>
+        <div class="container">
+        <p>Somos "Equidad Laboral" una bolsa de empleo especializada en la inclusión laboral de personas con discapacidad. Nuestro objetivo es conectar a personas con talento y habilidades con empresas que buscan crear lugares de trabajo inclusivos y diversos..</p></div>
         </div>
+
+        
 
 
         <!-- mision-vision -->
@@ -24,8 +24,8 @@
                     <div class="iconBx>">
                 </div> 
                 <div class="content">
-                    <h2>Mision</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, quaerat?
+                    <h2>Misión</h2>
+                    <p>Promover la inclusión laboral de personas con discapacidad, facilitando su acceso a oportunidades de trabajo dignas y competitivas, y contribuyendo a la construcción de una sociedad más justa e inclusiva.
                     </p>
                 </div>
             </div>
@@ -33,8 +33,8 @@
                 <div class="iconBx>">
                 </div> 
                 <div class="content">
-                    <h2>Vision</h2>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Amet, quaerat?
+                    <h2>Visión</h2>
+                    <p>Ser la bolsa de empleo líder en la inclusión laboral de personas con discapacidad, reconocida por nuestra eficiencia, transparencia y compromiso con la igualdad de oportunidades.
                     </p>
                 </div>
             </div>
