--- a/BEEL/registro_login/static/css/cambiar_password.css
+++ b/BEEL/registro_login/static/css/cambiar_password.css
@@ -2,7 +2,7 @@
 .container {
     width: 80%;
     max-width: 800px;
-    margin: 20px auto;
+    margin: 70px auto;
     padding: 20px;
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -25,12 +25,20 @@
 }
   
   /* Estilos para el título */
-h2 {
-    color: green;
+h1 {
+    color: #4CAF50;
     font-weight: bold;
     text-align: center;
     margin-bottom: 20px;
+    animation: h2-bounce 1s ease-in-out forwards;
   }
+
+  @keyframes h2-bounce {
+    from { transform: translateY(-20px); opacity: 0; }
+    to { transform: translateY(0); opacity: 1; }
+  }
+
+  
   
   /* Estilos generales del formulario */
   #cambiar-contrasena {
@@ -74,17 +82,18 @@ h2 {
   /* Estilos del botón */
   button {
     padding: 10px 20px;
-    background-color: rgb(0, 182, 0);
+    background-color: #4CAF50;
     color: white;
     border: none;
     border-radius: 5px;
     cursor: pointer;
+    transition: background-color 0.3s ease;
+    margin-top: 25px;
   }
 
+  
   button:hover {
-
-    background-color: green;
-
+    background-color: #307033;
   }
   
   /* Enlace para volver a editar perfil */
