--- a/BEEL/registro_login/static/css/form.css
+++ b/BEEL/registro_login/static/css/form.css
@@ -9,24 +9,43 @@ body {
 /* Container with slight shadow */
 .container {
   border-radius: 10px;
-  box-shadow: 0 0px 0px rgba(0, 0, 0, 0.1);
-  padding: 20px;
+  padding: 0px;
+  animation: container-aparecer 1.5s ease-in-out forwards;
 }
 
-/* Card with subtle hover effect */
 .card {
-  transition: transform 0.3s ease-in-out;
+  box-shadow: 0px 0px 0px rgba(0, 0, 0, 0.1);
+
+}
+/* Card with subtle hover effect */
+.card-body {
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  transition: card-body-aparecer 0.3s ease-in-out;
 }
 
-.card:hover {
-  transform: translateY(-5px);
-}
+
+@keyframes container-aparecer {
+  0% {
+      opacity: 0;
+      transform: translateX(-50px);
+    }
+    50% {
+      opacity: 1;
+      transform: translateX(0);
+    }
+    100% {
+      /* Add your animation styles here */
+    }
+  }
+
 
 /* Card title with animation */
 .card-title {
   color: #4CAF50;
   font-size: 2.5rem;
   animation: title-bounce 1s ease-in-out forwards;
+  font-weight: bold;
+  text-align: center;
 }
 
 @keyframes title-bounce {
@@ -79,7 +98,6 @@ input[type="password"]:focus {
 button[type="submit"],
 button[type="reset"],
 .btn {
-  background-image: linear-gradient(to right, #4CAF50, #388e3c);
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -88,11 +106,6 @@ button[type="reset"],
   transition: background-color 0.3s ease;
 }
 
-button[type="submit"]:hover,
-button[type="reset"]:hover,
-.btn:hover {
-  background-image: linear-gradient(to right, #388e3c, #2e7d32);
-}
 
 /* Button sizes (adjust if needed) */
 .btn-lg {
