--- a/BEEL/registro_login/static/css/lista_ofertas.css
+++ b/BEEL/registro_login/static/css/lista_ofertas.css
@@ -86,6 +86,7 @@
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
+    transition: background-color 0.3s ease;
 }
 
 .boton-aplicar button:hover {
