--- a/BEEL/registro_login/static/css/mision_vision.css
+++ b/BEEL/registro_login/static/css/mision_vision.css
@@ -1,26 +1,42 @@
 .services{
-    display: grid;
+    display: flex;
     grid-template-columns: auto auto auto;
     grid-gap: 30px;
     max-width: 100%;
     margin-top: 40px;
+    margin-bottom: 10px;
 }
 
 .services .box{
     width: 300px;
     margin:0 auto;
-    background: #195e5e;
+    background: #32ff2f61;
     padding: 20px;
-    box-shadow: 10px 5px 25px black;
+    padding-left: 20px;
+    border: 1px solid #ccc;
+    box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+    border-radius: 5px;
+    animation: box-aparecer 1s ease-in-out forwards; /* Add animation */
 }
+
+@keyframes box-aparecer{
+    from {
+      opacity: 0; /* Start hidden */
+      transform: translateY(50px); /* Start above the viewport */
+    }
+    to {
+      opacity: 1; /* End visible */
+      transform: translateY(0); /* End in original position */
+    }
+  }
 
 .services .box .iconbox{
     margin-top: 0px;
 }
 
 .services .box h2{
-    font-size: 18px;
+    font-size: 20px;
     margin-bottom: 10px;
     text-transform: uppercase;
-    font-weight: 700;
+    animation: box-h2-aparecer 1s ease-in-out forwards; /* Add animation */
 }
