--- a/BEEL/registro_login/templates/empresa/ver_seleccionados.html
+++ b/BEEL/registro_login/templates/empresa/ver_seleccionados.html
@@ -1,9 +1,9 @@
 {% extends "plantillas/plantilla_empresa.html" %}
 {% load static %}
 {% block content %}
-    
-    <h2>Postulantes Seleccionados para {{ oferta.titulo_cargo }}</h2>
-    <ul>
+    <link rel="stylesheet" href="{% static 'css/seleccionados.css'%}">
+    <h2>Postulantes Seleccionados - {{ oferta.titulo_cargo }}</h2>
+    <ul class="container">
         {% for seleccionado in seleccionados %}
             <li>
                 <h3>{{ seleccionado.nombres }} {{ seleccionado.apellidos }}</h3>
